--- a/src/Pages/FirstPage/FirstPage.scss
+++ b/src/Pages/FirstPage/FirstPage.scss
@@ -21,18 +21,62 @@
         margin-top: auto;
         // margin-left: 25px;
 
-        h1 {
-          padding: 0;
-          margin: 0;
-          font-size: 3rem;
-          font-family: "Archivo", sans-serif;
-          font-weight: 500;
+        .title--container {
+          display: flex;
+          h1 {
+            padding: 0;
+            margin: 0 5px;
+            font-size: 3rem;
+            font-family: "Archivo", sans-serif;
+            font-weight: 500;
+          }
+          div {
+            width: 45px;
+            height: 45px;
+            background-color: rgb(0, 0, 184);
+            border-radius: 50%;
+            // margin: 0 5px;
+          }
           span {
             font-family: "Questrial", sans-serif;
             font-size: 1rem;
             font-weight: 400;
             color: rgb(31, 31, 31);
           }
+        }
+      }
+
+      .right--container {
+        // border: 1px solid black;
+        margin-top: auto;
+        margin-left: auto;
+        width: 150px;
+        height: 10px;
+        // background-color: red;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        padding: 10px;
+
+        div {
+          width: 50px;
+          height: 10px;
+          box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px,
+            rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px,
+            rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px,
+            rgba(0, 0, 0, 0.07) 0px 32px 64px;
+          // border: 1px solid white;
+        }
+
+        .blue--div {
+          background-color: rgb(0, 0, 184);
+        }
+        .white--div {
+          background-color: white;
+        }
+        .black--div {
+          background-color: black;
         }
       }
     }
