--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -8,7 +8,7 @@ header {
   align-items: center; /* Center vertically */
   z-index: 9;
   top: 0;
-  // background-color: transparent;
+  background-color: transparent;
 
   // opacity: 0.7;
   .nav--container {
@@ -62,3 +62,61 @@ header {
     }
   }
 }
+
+// header {
+//   width: 100%;
+//   position: fixed;
+//   top: 0;
+//   z-index: 9;
+
+//   .nav {
+//     &_container {
+//       display: flex;
+//       justify-content: space-between;
+//       align-items: center;
+//       padding: 1rem 5rem;
+//     }
+//     &_logo {
+//       font-size: 3em;
+//     }
+//     &_links {
+//       display: flex;
+//       justify-content: space-between;
+//       width: 20%;
+//     }
+//     &_item {
+//       text-decoration: none;
+//       color: black;
+//     }
+//     &_item:hover {
+//       color: gray;
+//       transition: 0.3s;
+//     }
+//   }
+
+//   .nav {
+//     &_containe--black {
+//       display: flex;
+//       justify-content: space-between;
+//       align-items: center;
+//       padding: 1rem 5rem;
+//     }
+//     &_logo--black {
+//       font-size: 3em;
+//       color: black;
+//     }
+//     &_links-black {
+//       display: flex;
+//       justify-content: space-between;
+//       width: 20%;
+//     }
+//     &_item--black {
+//       text-decoration: none;
+//       color: white;
+//     }
+//     &_item--black:hover {
+//       color: gray;
+//       transition: 0.3s;
+//     }
+//   }
+// }
