--- a/src/Pages/AboutFirstPage/AboutFirstPage.scss
+++ b/src/Pages/AboutFirstPage/AboutFirstPage.scss
@@ -20,7 +20,7 @@
       text-decoration: none;
       font-size: 8rem;
       color: transparent;
-      -webkit-text-stroke: 2px #ffffff;
+      -webkit-text-stroke: 2px #000000;
     }
 
     .main--links:hover {
