--- a/src/Pages/ThirdPage/ThirdPage.scss
+++ b/src/Pages/ThirdPage/ThirdPage.scss
@@ -2,70 +2,84 @@
   height: 100vh;
   background-color: rgb(255, 255, 255);
 
-  // border: 1px solid black;
+  margin-top: 30vh;
 
   .third-page--container {
     max-width: 95%;
-    // height: 100%;
+    height: 80%;
     display: flex;
     margin: auto;
+    position: relative;
+
+    img {
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-position: center;
+    }
 
     .article {
+      position: absolute;
+      top: 25%;
+      left: 25%;
       width: 50%;
       height: 50%;
       padding: 0 30px;
-      margin-top: 30vh;
-      // border: 1px solid black;
+      //
+
+      // background-color: #f9f9f95d;
 
       .article--heading {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-          sans-serif;
+        // font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        //   Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        //   sans-serif;
+        font-family: "Archivo", sans-serif;
 
         font-size: 1.5rem;
         margin-top: 0;
-        color: #000000;
+        color: #f9f9f9;
 
         p {
           margin-top: 0;
         }
       }
       .h1--container {
+        justify-content: center;
+        align-items: center;
+        text-align: center;
         .article--description {
           // padding-right: 50px;
-          margin: 1rem 0;
-          font-family: "Questrial", sans-serif;
+          margin: 0;
+          font-family: "Archivo", sans-serif;
           // font-family: "PT Sans", sans-serif;
 
-          font-size: 21px;
+          font-size: 2rem;
           line-height: 1.3;
           text-align: justify;
-          color: #000000;
-          font-weight: lighter;
+          color: #ffffff;
+          font-weight: 500;
+          text-align: center;
+          margin-bottom: 2rem;
         }
 
-        .learn-more--btn {
-          font-family: "Poppins", sans-serif;
-          font-weight: lighter;
-          font-size: 15px;
+        .learn-more {
+          font-family: "Questrial", sans-serif;
+
+          font-size: 0.8rem;
           padding: 10px 25px;
-          border-radius: 40px;
-          background-color: rgb(255, 255, 255);
-          color: rgb(0, 0, 0);
+          color: rgb(255, 255, 255);
           border: none;
-          // margin-left: auto; /* Center horizontally */
-          border: 1px solid rgb(0, 0, 0);
-          margin-top: 2rem;
+          font-weight: 200;
         }
       }
 
-      .learn-more--btn:hover {
-        border: 1px solid rgb(0, 0, 0);
-        background-color: rgb(0, 0, 0);
-        color: rgb(255, 255, 255);
-        transition: 0.3s;
-        cursor: pointer;
-      }
+      // .learn-more--btn:hover {
+      //   border: 1px solid rgb(0, 0, 0);
+      //   background-color: rgb(0, 0, 0);
+      //   color: rgb(255, 255, 255);
+      //   transition: 0.3s;
+      //   cursor: pointer;
+      // }
     }
 
     .particle-motion {
