--- a/src/Pages/SecondPage/SecondPage.scss
+++ b/src/Pages/SecondPage/SecondPage.scss
@@ -1,6 +1,6 @@
 .second--container {
   height: 150vh;
-  margin-top: 25px;
+  margin-top: 10vh;
   position: relative;
   .main--container {
     width: 95%;
@@ -8,7 +8,7 @@
     margin: 0 auto;
     display: flex;
     overflow: hidden;
-    border-top: 1px solid black;
+    // border-top: 1px solid black;
 
     .left--container {
       width: 60%;
