--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,21 +1,37 @@
 footer {
   background-color: rgb(255, 255, 255);
+  margin-top: 20vh;
 
   .footer--container {
     height: 50vh;
-    width: 100%;
+    width: 95%;
     position: relative;
-    .footer-paragraph {
-      text-align: center;
-      position: absolute;
-      color: #000000c8;
-      bottom: 10%;
-      width: 100%;
-      font-family: "Poppins", sans-serif;
-      font-weight: 200;
-      font-size: 12px;
-      p {
-        margin: 0;
+    border-top: 1px solid rgb(0, 0, 0);
+
+    margin: auto;
+
+    .footer {
+      display: flex;
+      flex-direction: column;
+      .footer--head {
+        border: 1px solid black;
+        width: 100%;
+        height: 200px;
+      }
+      .footer-paragraph {
+        border: 1px solid black;
+
+        text-align: center;
+        position: absolute;
+        color: #000000c8;
+        bottom: 10%;
+        width: 100%;
+        font-family: "Poppins", sans-serif;
+        font-weight: 200;
+        font-size: 12px;
+        p {
+          margin: 0;
+        }
       }
     }
   }
