--- a/src/Pages/ThirdPage/ThirdPage.scss
+++ b/src/Pages/ThirdPage/ThirdPage.scss
@@ -57,7 +57,7 @@
           line-height: 1.3;
           text-align: justify;
           color: #ffffff;
-          font-weight: 500;
+          font-weight: 400;
           text-align: center;
           margin-bottom: 2rem;
         }
@@ -65,11 +65,16 @@
         .learn-more {
           font-family: "Questrial", sans-serif;
 
-          font-size: 0.8rem;
+          font-size: 1rem;
           padding: 10px 25px;
           color: rgb(255, 255, 255);
           border: none;
           font-weight: 200;
+
+          img {
+            width: 15px;
+            padding-left: 5px;
+          }
         }
       }
 
