--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -8,25 +8,106 @@ footer {
     position: relative;
     border-top: 1px solid rgb(0, 0, 0);
 
-    margin: auto;
+    margin: 0 auto;
 
     .footer {
       display: flex;
       flex-direction: column;
-      .footer--head {
-        border: 1px solid black;
-        width: 100%;
-        height: 200px;
-      }
-      .footer-paragraph {
-        border: 1px solid black;
+      margin: 0;
+      height: 100%;
+      // border: 1px solid black;
 
+      .footer--head {
+        // border: 1px solid black;
+        width: 100%;
+        height: 80%;
+        display: flex;
+        margin: 0 auto;
+        position: relative;
+        .footer--head--one {
+          width: 30%;
+          height: 100%;
+          // border: 1px solid black;
+          display: flex;
+          flex-direction: column;
+          padding: 20px;
+
+          a {
+            text-decoration: none;
+            font-size: 2.2rem;
+            color: black;
+            font-family: "Archivo", sans-serif;
+            font-weight: 600;
+            margin-bottom: 10px;
+          }
+        }
+
+        .footer--head--three {
+          width: 30%;
+          height: 100%;
+          // border: 1px solid black;
+
+          // border: 1px solid black;
+          display: flex;
+          flex-direction: column;
+          padding: 20px;
+          // text-align: end;
+
+          a {
+            text-decoration: none;
+            font-size: 2rem;
+            color: black;
+            font-family: "Archivo", sans-serif;
+            font-weight: 600;
+            margin-bottom: 10px;
+          }
+        }
+        .logo--container {
+          // width: 10%;
+          // height: 100%;
+          margin-left: auto;
+          // border: 1px solid black;
+          padding: 20px;
+          position: absolute;
+          bottom: 0;
+          right: 0;
+
+          .title--container {
+            display: flex;
+            // border: 1px solid black;
+            h1 {
+              padding: 0;
+              margin: 0 5px;
+              font-size: 3rem;
+              font-family: "Archivo", sans-serif;
+              font-weight: 200;
+            }
+            div {
+              width: 45px;
+              height: 45px;
+              background-color: rgb(0, 0, 184);
+              border-radius: 50%;
+              // margin: 0 5px;
+            }
+            span {
+              font-family: "Questrial", sans-serif;
+              font-size: 1rem;
+              font-weight: 400;
+              color: rgb(31, 31, 31);
+            }
+          }
+        }
+      }
+
+      .footer-paragraph {
+        border-top: 1px solid black;
+        padding-top: 20px;
         text-align: center;
         position: absolute;
-        color: #000000c8;
+        color: #000000;
         bottom: 10%;
         width: 100%;
-        font-family: "Poppins", sans-serif;
+        font-family: "Questrial", sans-serif;
         font-weight: 200;
         font-size: 12px;
         p {
