--- a/src/Pages/FifthPage/FifthPage.scss
+++ b/src/Pages/FifthPage/FifthPage.scss
@@ -1,5 +1,6 @@
 .fourth-page {
   height: 100vh;
+  width: 100%;
   background-color: rgb(255, 255, 255);
 
   .fourth-page--container {
@@ -9,74 +10,33 @@
     display: flex;
 
     .text--container {
-      width: 50%;
+      width: 100%;
+      height: 40%;
       color: rgb(0, 0, 0);
-      margin: 30vh auto;
+      margin-top: auto;
+
       // position: relative;
-      // border: 1px solid red;
 
-      .header--container {
-        margin-bottom: 20px;
-        // text-align: center;
-        padding: 0;
-        .text {
-          margin: 0;
-          padding: 0;
+      text-align: center;
+      padding-top: 20vh;
+
+      h1 {
+        margin: 10px auto;
+        font-family: "Questrial", sans-serif;
+        font-size: 1rem;
+        font-weight: 200;
+        width: 60%;
+      }
+
+      a {
+        text-decoration: none;
+        h1 {
+          width: 100%;
           font-size: 5rem;
-          color: transparent;
-          font-family: "Roboto", sans-serif;
-          -webkit-text-stroke: 2px black;
+          font-weight: 600;
+          color: black;
+          font-family: "Archivo", sans-serif;
         }
-      }
-
-      .qna--container {
-        margin: 30px 0;
-        // border: 1px solid white;
-        .question--container {
-          border-bottom: 1px solid rgba(0, 0, 0, 0.7);
-          display: flex;
-          cursor: pointer;
-          justify-content: space-between;
-
-          .question--text {
-            margin: 0;
-            font-size: 1.5rem;
-            font-weight: 400;
-            font-family: "Questrial", sans-serif;
-
-            color: #000000e8;
-          }
-          .svg--icons {
-            width: 20px;
-          }
-        }
-        .ans--container {
-          // border: 1px solid white;
-          // margin: 0px 0 0 0;
-          // padding: 0 10px 0 10px;
-          .ans--text {
-            margin-top: 10px;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont,
-              "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-              "Helvetica Neue", sans-serif;
-
-            font-size: 1.2rem;
-            font-weight: 200;
-          }
-        }
-      }
-    }
-    .box--container {
-      width: 20%;
-      // margin-top: 30vh;
-      margin-left: auto;
-      // height: 90%;
-      // overflow: hidden;
-      .box {
-        margin-top: 80vh;
-        width: 200px;
-        height: 200px;
-        background-color: rgb(0, 0, 0);
       }
     }
   }
