--- a/src/Pages/SecondPage/SecondPage.scss
+++ b/src/Pages/SecondPage/SecondPage.scss
@@ -2,13 +2,15 @@
   height: 150vh;
   margin-top: 10vh;
   position: relative;
+
   .main--container {
     width: 95%;
-    height: 40%;
+    height: 30%;
     margin: 0 auto;
     display: flex;
     overflow: hidden;
-    // border-top: 1px solid black;
+
+    border-radius: 10px;
 
     .left--container {
       width: 60%;
@@ -55,16 +57,40 @@
 
   .second--main--container {
     // position: absolute;
-    height: 40%;
+    height: 70%;
     width: 100%;
 
-    margin-top: 30vh;
+    margin-top: 20vh;
+    // border: 1px solid black;
+    .image--container {
+      width: 95%;
+      height: 50%;
+      // border: 1px solid black;
+      display: flex;
+      margin: 0 auto;
+
+      .image--container--mini {
+        width: 50%;
+        height: 100%;
+        // border: 1px solid red;
+        display: flex;
+
+        img {
+          width: 100%;
+          background-size: cover;
+          background-position: center;
+          // margin-left: 5px;
+        }
+      }
+    }
 
     .card--container {
       display: flex;
+      // border: 1px solid black;
       // flex-wrap: wrap;
-      height: 60%;
+      height: 30%;
       padding: 0 25px;
+      margin-top: 10px;
       // border: 1px solid black;
 
       .card {
@@ -114,8 +140,10 @@
         border: none;
         text-align: start;
         box-shadow: none;
-        margin: 10px;
-        width: 18%;
+        // margin: 0;
+        width: 15%;
+
+        // border: 1px solid black;
 
         h1 {
           font-family: "Archivo", sans-serif;
