--- a/src/Pages/FifthPage/FifthPage.scss
+++ b/src/Pages/FifthPage/FifthPage.scss
@@ -1,10 +1,14 @@
 .fourth-page {
   height: 100vh;
   width: 100%;
-  background-color: rgb(255, 255, 255);
+  background-color: black; // can change back
+  // Cover card
+  margin-top: -20%; 
+  z-index: 99;
+  position: relative;
 
   .fourth-page--container {
-    width: 95%;
+    width: 100%;
     height: 100%;
     margin: 0 auto;
     display: flex;
@@ -12,8 +16,8 @@
     .text--container {
       width: 100%;
       height: 40%;
-      color: rgb(0, 0, 0);
-      margin-top: auto;
+      color: rgb(255, 255, 255);
+      margin: auto;
 
       // position: relative;
 
@@ -27,14 +31,14 @@
         font-weight: 200;
         width: 60%;
       }
-
+      
       a {
         text-decoration: none;
         h1 {
           width: 100%;
           font-size: 5rem;
           font-weight: 600;
-          color: black;
+          color: white;
           font-family: "Archivo", sans-serif;
         }
       }
