Scroll lag bug need to fix here

--- a/src/Pages/ThirdPage/ThirdPage.scss
+++ b/src/Pages/ThirdPage/ThirdPage.scss
@@ -2,7 +2,7 @@
   height: 100vh;
   background-color: rgb(255, 255, 255);
 
-  margin-top: 30vh;
+  // margin-top: 30vh;
 
   .third-page--container {
     max-width: 95%;
