--- a/src/Pages/FifthPage/FifthPage.scss
+++ b/src/Pages/FifthPage/FifthPage.scss
@@ -1,10 +1,10 @@
 .fourth-page {
   height: 100vh;
   width: 100%;
-  background-color: black; // can change back
+  background-color: rgb(255, 255, 255); // can change back
   // Cover card
-  margin-top: -20%; 
-  z-index: 99;
+  margin-top: -20%;
+  z-index: 3;
   position: relative;
 
   .fourth-page--container {
@@ -16,7 +16,7 @@
     .text--container {
       width: 100%;
       height: 40%;
-      color: rgb(255, 255, 255);
+      color: rgb(0, 0, 0);
       margin: auto;
 
       // position: relative;
@@ -31,14 +31,14 @@
         font-weight: 200;
         width: 60%;
       }
-      
+
       a {
         text-decoration: none;
         h1 {
           width: 100%;
           font-size: 5rem;
           font-weight: 600;
-          color: white;
+          color: rgb(0, 0, 0);
           font-family: "Archivo", sans-serif;
         }
       }
