--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,6 +1,6 @@
 footer {
   background-color: rgb(255, 255, 255);
-  margin-top: 20vh;
+  // margin-top: 20vh;
 
   .footer--container {
     height: 50vh;
@@ -116,4 +116,8 @@ footer {
       }
     }
   }
+}
+
+a:hover {
+  opacity: 0.6;
 }
