--- a/src/Pages/FifthPage/FifthPage.scss
+++ b/src/Pages/FifthPage/FifthPage.scss
@@ -6,6 +6,7 @@
   margin-top: -20%;
   z-index: 3;
   position: relative;
+  // border: 1px solid black;
 
   .fourth-page--container {
     width: 100%;
@@ -30,6 +31,10 @@
         font-size: 1rem;
         font-weight: 200;
         width: 60%;
+      }
+
+      h1:hover {
+        opacity: 0.6;
       }
 
       a {
