--- a/src/Pages/FourthPage/FourthPage.scss
+++ b/src/Pages/FourthPage/FourthPage.scss
@@ -9,18 +9,20 @@
     //  text-align: center;
     display: flex;
     flex-wrap: wrap;
-    font-size: 4.5rem;
+    font-size: 5rem;
     font-family: "Archivo", sans-serif;
     //  -webkit-text-stroke: 2px #ffffff;
-    font-weight: 600;
+    font-weight: 800;
     margin: 10px 0;
     //  color: transparent;
-    width: 40%;
-    text-overflow: ellipsis;
+    width: 50%;
     //  border-bottom: 2px solid black;
-    font-size-adjust: 0.5;
     //  background-color: #0040ff;
     //  border-bottom: 2px solid rgba(0, 0, 0, 0.074);s
+    background-image: url("https://i.pinimg.com/474x/8d/6b/c5/8d6bc5075a5e37bd500e3a1ceb5fc1f0.jpg");
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
   }
   &_sticky {
     position: sticky;
