--- a/src/Pages/Services/SecondHelper.scss
+++ b/src/Pages/Services/SecondHelper.scss
@@ -1,6 +1,6 @@
 .helper--container {
   // border: 1px solid black;
-  margin-top: 20vh;
+  margin: 20vh 0;
 
   .text--container {
     // border: 1px solid black;
