--- a/src/Pages/FourthPage/FourthPage.scss
+++ b/src/Pages/FourthPage/FourthPage.scss
@@ -19,7 +19,7 @@
     //  border-bottom: 2px solid black;
     //  background-color: #0040ff;
     //  border-bottom: 2px solid rgba(0, 0, 0, 0.074);s
-    background-image: url("https://i.pinimg.com/474x/8d/6b/c5/8d6bc5075a5e37bd500e3a1ceb5fc1f0.jpg");
+    background-image: url("../../../public/img/textFillOne.jpeg");
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
