Original transition animated

--- a/src/Pages/AboutFirstPage/AboutFirstPage.scss
+++ b/src/Pages/AboutFirstPage/AboutFirstPage.scss
@@ -4,6 +4,7 @@
   height: 100%;
   padding: 20vh 0;
   position: relative;
+  margin-bottom: 20vh;
 
   .header--container {
     // border: 1px solid white;
