--- a/src/Components/TaleOfUs/TaleOfUs.scss
+++ b/src/Components/TaleOfUs/TaleOfUs.scss
@@ -1,118 +1,118 @@
 .aboutus--container {
-   display: block;
-   background-color: rgb(0, 0, 0);
-   height: auto; // Change this so that the stacking page can work
-   width: 100%;
-   // margin-top: 10vh;
-   margin: 0 auto;
+  display: block;
+  background-color: rgb(0, 0, 0);
+  height: auto; // Change this so that the stacking page can work
+  width: 100%;
+  // margin-top: 10vh;
+  margin: 0 auto;
 
-   border: none;
+  border: none;
 
-   h1 {
-      font-family: "Archivo", sans-serif;
-      border-bottom: 1px solid black;
-      margin: 0;
-      color: #fff;
-      font-size: 7rem;
-   }
+  h1 {
+    font-family: "Archivo", sans-serif;
+    border-bottom: 1px solid black;
+    margin: 0;
+    color: #fff;
+    font-size: 7rem;
+  }
 
-   .body--container {
+  .body--container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    // height: 200vh;
+
+    .img--container {
       width: 100%;
+      // border: 1px solid rgb(255, 255, 255);
+      overflow: hidden;
+
+      img {
+        width: 100%;
+        // height: 100%;
+        background-size: cover;
+        background-position: center;
+      }
+    }
+
+    .p--container {
+      // border: 1px solid white;
       display: flex;
-      flex-direction: column;
-      margin: 0;
-      height: 100%;
+      width: 90%;
+      height: 40%;
+      margin: 0 auto;
 
-      .img--container {
-         height: 40%;
-         width: 100%;
-         border: 1px solid rgb(255, 255, 255);
-         overflow: hidden;
-
-         img {
-            width: 100%;
-            // height: 100%;
-            background-size: cover;
-            background-position: center;
-         }
+      .quote--container {
+        width: 40%;
+        font-family: "Questrial", sans-serif;
+        font-size: 1.1rem;
+        color: #fff;
+        line-height: 20px;
+        margin-top: 10vh;
+        font-weight: 200;
       }
 
-      .p--container {
-         // border: 1px solid white;
-         display: flex;
-         width: 90%;
-         height: 40%;
-         margin: 0 auto;
-
-         .quote--container {
-            width: 40%;
-            font-family: "Questrial", sans-serif;
-            font-size: 1.1rem;
-            color: #fff;
-            line-height: 20px;
-            margin-top: 10vh;
-            font-weight: 200;
-         }
-
-         .para--container {
-            width: 25%;
-            margin-left: auto;
-            font-family: "Questrial", sans-serif;
-            font-size: 1.1rem;
-            color: #fff;
-            padding-top: 10vh;
-            line-height: 20px;
-            font-weight: 200;
-            // border: 1px solid red;
-         }
+      .para--container {
+        width: 25%;
+        margin-left: auto;
+        font-family: "Questrial", sans-serif;
+        font-size: 1.1rem;
+        color: #fff;
+        padding-top: 10vh;
+        line-height: 20px;
+        font-weight: 200;
+        // border: 1px solid red;
       }
-   }
+    }
+  }
 }
 
 .detail-card {
-   &_item {
-      box-sizing: border-box;
-      padding: 0 30px 30px;
-      width: 100vw;
-      height: 100vh;
-      position: sticky;
-      top: 5%;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-         Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-   }
+  &_item {
+    box-sizing: border-box;
+    padding: 0 30px 30px;
+    width: 100vw;
+    height: 100vh;
+    position: sticky;
+    top: 5%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
-   &_header {
-      font-size: 18rem;
-      margin: 0;
-   }
+  &_header {
+    font-size: 18rem;
+    margin: 0;
+  }
 
-   &_description {
-      width: 70%;
-      font-size: 3.3rem;
-      line-height: 1;
-   }
+  &_description {
+    width: 70%;
+    font-size: 3.3rem;
+    line-height: 1;
+  }
 
-   &_one {
-      background-color: white;
-   }
+  &_one {
+    background-color: white;
+  }
 
-   &_two {
-      background-color: black;
-      color: white;
-   }
+  &_two {
+    background-color: black;
+    color: white;
+  }
 
-   &_three {
-      background-color: white;
-   }
+  &_three {
+    background-color: white;
+  }
 
-   &_img {
+  &_img {
     padding: 0;
-      img {
-         width: 100%;
-         height: 100%;
-      }
-   }
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
