--- a/src/Pages/FirstPage/FirstPage.scss
+++ b/src/Pages/FirstPage/FirstPage.scss
@@ -89,11 +89,15 @@
       position: relative;
       overflow: hidden;
 
-      img {
+      .img--container {
         width: 100%;
-        height: 1280px;
-        background-size: cover;
-        background-position: center;
+
+        img {
+          width: 100%;
+          height: 1280px;
+          background-size: cover;
+          background-position: center;
+        }
       }
 
       .right--container {
@@ -134,8 +138,7 @@
       display: flex;
       flex-direction: column;
       .upper--container {
-        // display: none;
-        height: 10%;
+        height: 20%;
         width: 95%;
         // border: 1px solid black;
         // margin: 0 auto;
@@ -143,7 +146,7 @@
         // border: 1px solid black;
         .left--container {
           // border: 1px solid black;
-          margin-top: auto;
+          margin: 0 auto;
           // margin-left: 25px;
           display: none;
         }
@@ -162,28 +165,34 @@
         background-color: #fff;
         position: relative;
 
-        img {
-          margin-top: 15vh;
-          width: 100%;
+        .img--container {
           height: 50%;
-          background-size: cover;
-          background-position: center;
+          overflow: hidden;
+
+          img {
+            margin-top: 0;
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-position: center;
+            overflow: hidden;
+          }
         }
 
         .right--container {
-          width: 90%;
-          height: 32%;
+          width: 95%;
+          height: 20%;
           text-align: start;
           position: relative;
           margin: 0 auto;
-          padding: 0 10px;
+          padding: 0px;
 
           p {
             font-family: "Questrial", sans-serif;
-            line-height: 30px;
+            line-height: 20px;
             font-weight: 400;
             color: rgb(0, 0, 0);
-            font-size: 2em;
+            font-size: 1.5em;
           }
         }
       }
