--- a/src/Pages/FirstPage/FirstPage.scss
+++ b/src/Pages/FirstPage/FirstPage.scss
@@ -126,7 +126,7 @@
   .first-page--container {
     height: 100vh;
     // z-index: 9;
-    border: 1px solid black;
+    // border: 1px solid black;
     width: 100%;
 
     .container {
@@ -166,7 +166,7 @@
         position: relative;
 
         .img--container {
-          height: 50%;
+          height: 60%;
           overflow: hidden;
 
           img {
