--- a/src/Pages/SecondPage/SecondPage.scss
+++ b/src/Pages/SecondPage/SecondPage.scss
@@ -379,7 +379,7 @@
 
         .card {
           width: 100%;
-          height: 40%;
+          height: 35%;
           margin: 0;
           border-radius: 10px;
           box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -416,16 +416,16 @@
               // border: 1px solid black;
             }
           }
-        }
 
-        // bottom: 10%;
+          // bottom: 10%;
+        }
         .card--one {
           border: none;
           text-align: start;
           box-shadow: none;
           // margin: 0;
           width: 100%;
-          height: 10%;
+          height: 15%;
           text-align: center;
 
           // border: 1px solid black;
@@ -450,8 +450,10 @@
 
         .lower--card--container {
           display: flex;
-          height: 40%;
+          height: 35%;
           width: 100%;
+          overflow: hidden;
+
           // border: 1px solid red;
 
           .card {
