--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -44,9 +44,53 @@ header {
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
   header {
-    padding: 15px 30px;
+    // width: 85%;
+
+    /* Center horizontally */
+    justify-content: center;
+
+    align-items: center; /* Center vertically */
+    z-index: 9;
+    top: 0;
+    // background-color: red;
+    // border: 1px solid black;
+    position: relative;
+
+    // opacity: 0.7;
+    .nav--container {
+      display: flex;
+      padding: 0 10px;
+      // border: 1px solid black;
+
+      .logo {
+        // color: rgb(0, 0, 0);
+        font-size: 35px;
+        font-family: "Poppins", sans-serif;
+      }
+
+      .nav--links {
+        margin-left: auto;
+        padding-top: 18px;
+        // background-color: red;
+        right: 0%;
+        .nav--link {
+          // color: #000000;
+          margin: 0 10px;
+          font-size: 15px;
+          font-family: "Questrial", sans-serif;
+          font-weight: 200;
+          text-decoration: none;
+        }
+
+        .nav--link:hover {
+          opacity: 0.5;
+          // color: greenyellow;
+        }
+      }
+      // }
+    }
   }
 }
 
