--- a/src/Pages/FirstPage/FirstPage.scss
+++ b/src/Pages/FirstPage/FirstPage.scss
@@ -122,6 +122,86 @@
   }
 }
 
+@media (max-width: 1000px) {
+  .first-page--container {
+    height: 100vh;
+    // z-index: 9;
+    // border: 1px solid black;
+    width: 100%;
+
+    .container {
+      width: 100%;
+      height: 100%;
+      // border: 1px solid red;
+      background-color: rgb(255, 255, 255);
+      margin-top: 0vh;
+
+      display: flex;
+      flex-direction: column;
+      .upper--container {
+        height: 20%;
+        width: 95%;
+
+        // margin: 0 auto;
+        // display: flex;
+        // border: 1px solid black;
+        .left--container {
+          // border: 1px solid black;
+          margin: 0 auto;
+          // margin-left: 25px;
+          display: none;
+        }
+
+        .right--container {
+          display: none;
+        }
+      }
+
+      .lower--container {
+        // border: 1px solid black;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+        background-color: #fff;
+        position: relative;
+
+        .img--container {
+          height: 100%;
+          overflow: hidden;
+
+          img {
+            margin-top: 0;
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-position: center;
+            overflow: hidden;
+          }
+        }
+
+        .right--container {
+          width: 95%;
+          height: 22%;
+          text-align: start;
+          position: relative;
+          margin: 0 auto;
+          padding: 0px;
+
+          p {
+            font-family: "Questrial", sans-serif;
+            line-height: 20px;
+            font-weight: 400;
+            color: rgb(0, 0, 0);
+            font-size: 1.5em;
+          }
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: "500px") {
   .first-page--container {
     height: 100vh;
